Now Linux compatible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.20.5)
+cmake_minimum_required(VERSION 3.16.0)
+set(CMAKE_C_COMPILER "gcc-9.3")
 project(GL-3)
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
@@ -21,16 +22,18 @@ target_include_directories(${PROJECT_NAME}
     PRIVATE ${LIB_DIR}/glfw/include
 )
 
-#target_link_directories(${PROJECT_NAME} 
-#    PRIVATE src
-#    PRIVATE lib/glad
-#    PRIVATE lib/glfw/src
-#)
+target_link_directories(${PROJECT_NAME} 
+    PRIVATE src
+    PRIVATE lib/glad
+    PRIVATE lib/glfw/src
+)
 
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE src
     PRIVATE glad ${CMAKE_DL_LIBS}
     PRIVATE glfw3
+    PRIVATE m
+    PRIVATE pthread 
 )
 
 # glad
